--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ Player.log
 worlds/steam_autocloud.vdf
 characters/yorgmund.fch
 characters/yorgmund.fch.old
+screenshots/screenshot_2021-03-07_173847.png
+screenshots/screenshot_2021-03-07_173848.png
+worlds/Popich1337.mod.serversidemap.explored
+worlds/stagarg.mod.serversidemap.explored
